Change the Unix time to the formatted time and add the offset message.

--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -3,20 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="88dp"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
     android:padding="16dp">
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/level"
+        android:id="@+id/magnitude"
         android:layout_weight="1"
         tools:text="7.2"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/location"
+        android:id="@+id/location_offset"
+        android:layout_weight="1"
+        tools:text="San Francisco"/>
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/primary_location"
         android:layout_weight="1"
         tools:text="San Francisco"/>
 
@@ -26,4 +32,11 @@
         android:id="@+id/date"
         android:layout_weight="1"
         tools:text="Feb 2,2016"/>
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:text="3:00 PM" />
 </LinearLayout>
