--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -8,17 +8,23 @@
     android:padding="16dp">
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="center_vertical"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
         android:id="@+id/magnitude"
-        android:layout_weight="1"
+        android:background="@drawable/magnitude_circle"
         tools:text="7.2"/>
     <TextView
+        android:id="@+id/location_offset"
+        android:layout_marginLeft="16dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/location_offset"
         android:layout_weight="1"
-        tools:text="San Francisco"/>
+        tools:text="30km S of"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
