--- a/app/src/main/res/xml/settings_main.xml
+++ b/app/src/main/res/xml/settings_main.xml
@@ -17,4 +17,12 @@
         android:selectAllOnFocus="true"
         android:title="@string/settings_min_magnitude_label" />
 
+    <EditTextPreference
+        android:defaultValue="@string/settings_max_magnitude_default"
+        android:inputType="numberDecimal"
+        android:key="@string/settings_max_magnitude_key"
+        android:selectAllOnFocus="true"
+        android:title="@string/settings_max_magnitude_label" />
+
+    
 </PreferenceScreen>
