--- a/app/src/main/res/xml/settings_main.xml
+++ b/app/src/main/res/xml/settings_main.xml
@@ -24,5 +24,12 @@
         android:selectAllOnFocus="true"
         android:title="@string/settings_max_magnitude_label" />
 
-    
+    <EditTextPreference
+        android:defaultValue="@string/settings_item_number_default"
+        android:inputType="numberDecimal"
+        android:key="@string/settings_item_number_key"
+        android:selectAllOnFocus="true"
+        android:title="@string/settings_item_number_label" />
+
+
 </PreferenceScreen>
